@@ -47,15 +47,15 @@ public class ProcessBootstrap {
         ClassLoaderFactory classLoaderFactory = new DefaultClassLoaderFactory();
         ClassPath antClasspath = classPathRegistry.getClassPath("ANT");
         ClassPath runtimeClasspath = classPathRegistry.getClassPath("GRADLE_RUNTIME");
-        ClassLoader antClassLoader = classLoaderFactory.createIsolatedClassLoader(antClasspath);
-        ClassLoader runtimeClassLoader = new VisitableURLClassLoader(antClassLoader, runtimeClasspath);
+        ClassLoader antClassLoader = classLoaderFactory.createIsolatedClassLoader("ant-loader", antClasspath);
+        ClassLoader runtimeClassLoader = new VisitableURLClassLoader("ant-and-gradle-loader", antClassLoader, runtimeClasspath);
 
         ClassLoader oldClassLoader = Thread.currentThread().getContextClassLoader();
         Thread.currentThread().setContextClassLoader(runtimeClassLoader);
 
         try {
             Class<?> mainClass = runtimeClassLoader.loadClass(mainClassName);
-            Object entryPoint = mainClass.newInstance();
+            Object entryPoint = mainClass.getConstructor().newInstance();
             Method mainMethod = mainClass.getMethod("run", String[].class);
             mainMethod.invoke(entryPoint, new Object[]{args});
         } finally {
